--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,6 +18,21 @@ nav{
     font-size:45px ;
     font-weight: 800;
 }
+.section-title
+{
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+
+}
+.section-description
+{
+    color: #757575;
+    text-align:center ;
+    font-family: Open Sans;
+    font-size: 18px;
+}
 .btn-primary{
     border-radius: 5px;
     background: #FD6E0A; 
@@ -44,13 +59,56 @@ nav a{
 /* header related style */
 .header{
     background-color: #fff8f3;
+    background-image: url(header_bg.png);
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding:30px 30px 30px 150px;
+    padding:30px 30px 0 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 
+}
+.banner-content
+{
+    max-width: 500px;
 }
 .banner .profile-pic{
     width: 500px;
+}
+.banner-greeting{
+    font-size: 45px; 
+    color: #474747;
+    margin-bottom: 0;
+
+}
+.banner-title{
+    font-size: 85px;
+   font-weight:700 ;
+   margin-top: 5px;
+   margin-bottom: 20px;
+}
+/* main section styles */
+main
+{
+    max-width:1140px;
+    margin: 0 auto;
+}
+/* about section styles */
+.about
+{
+    padding: 130px;
+    border-radius: 10px;
+    background: #fff8f3;
+    margin: 130px 0;
+
+}
+.about-info-container{
+    display: flex;
+   justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+    
 }
