--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,10 @@ main
 {
     max-width:1140px;
     margin: 0 auto;
+
+}
+main section{
+    margin-top: 130px;
 }
 /* about section styles */
 .about
@@ -109,6 +113,63 @@ main
    justify-content: space-around;
 }
 .about-info{
-    text-align: center;
+    text-align: center;   
+}
+/* What i do related style */
+#what-i-do-description{
+    padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    gap:24px;
+}
+.skill-description{
+    color:#757575
+}
+.skill{
+    padding: 30px;
     
+    border-radius: 5px;
+background: #FFF;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+
+
+}
+.resume-column-title
+{
+    color: var(--dark-02, #474747);
+font-family: Open Sans;
+font-size: 30px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+   
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+
+}
+.resume-item-institute
+{
+   margin-bottom: 20px;
+   margin-top: 0px;
+}
+.resume-item-institute,.resume-item-description{
+    color: #757575;
+}
+.resume-item-title{
+    color:  #474747;
+
+font-size: 25px;
+font-style: normal;
+font-weight: 700;
+}
+.resume-container hr {
+    margin: 30px;
+    margin-bottom: 10px;
+}
+.download-cv{
+     text-align: center;
+     margin-top: 50px;
 }
