--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,3 +173,12 @@ font-weight: 700;
      text-align: center;
      margin-top: 50px;
 }
+/* footer style */
+footer{
+    display: flex;
+    background: #fff8f3;
+    margin-top: 100px;
+    padding: 130px 150px;
+   
+    
+}
