--- a/styles/styles.css
+++ b/styles/styles.css
@@ -179,6 +179,28 @@ footer{
     background: #fff8f3;
     margin-top: 100px;
     padding: 130px 150px;
+    gap: 100px;
    
     
+}
+.footer-column{
+    width: 50%;
+    
+}
+.contact input[type="text"],.contact input[type="email"],
+textarea{
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color:#757575;
+    border-radius: 5px;
+    background:white ;
+    border: 0;
+  width: 100%;
+}
+.contact{
+
+}
+.social-links a{
+     margin-right: 25px;
 }
